--- a/App/ClientApp/src/app/layout/users/list/list.component.html
+++ b/App/ClientApp/src/app/layout/users/list/list.component.html
@@ -28,7 +28,7 @@
           <!-- Position Column -->
           <ng-container matColumnDef="name">
             <th class="width20  ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element"><img class="user-img" src="assets/images/user.jpg"><span class="user-name">{{element.FirstName}}</span> </td>
+            <td mat-cell *matCellDef="let element"><img class="user-img" src="assets/images/user.jpg"><span class="user-name">{{element.FirstName}} {{element.LastName}}</span></td>
           </ng-container>
 
           <!-- Name Column -->
@@ -72,7 +72,7 @@
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
                 <button type="button" title="View" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'View' }))" (click)="viewUser(element)" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
-                <button type="button" title="Update" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Edit' }))" (click)="editUser(element)" id="btnUpdate"><span class="fa fa-pencil-square-o"></span></button>
+                <button type="button" [disabled]="!element.IsActive" title="Update" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Edit' }))" (click)="editUser(element)" id="btnUpdate"><span class="fa fa-pencil-square-o"></span></button>
                 <button type="button" title="Delete" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Delete' }))" (click)="deleteUser(element)" id="btnDelete" data-toggle="modal" data-target="#confirmModal"><span class="fa fa-trash-o"></span></button>
                 <button type="button" (click)="unLockUser(element)" title="Lock User"><span class="fa fa-unlock-alt"></span></button>
                 <button type="button" title="Deactivate User" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Edit' }))"><span class="fa fa-toggle-on text-success"></span></button>
