--- a/App/ClientApp/src/app/layout/roles/list/list.component.html
+++ b/App/ClientApp/src/app/layout/roles/list/list.component.html
@@ -18,12 +18,12 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+      <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
         <!-- Position Column -->
         <ng-container matColumnDef="name">
           <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
@@ -36,19 +36,19 @@
         </ng-container>
 
         <ng-container matColumnDef="actions">
-          <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+          <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
           <td mat-cell *matCellDef="let role">
             <div class="action-btns btn-tbl-action">
-              <button type="button" id="btnViewTile" (click)="navigateToRoleView(role)"
+              <button type="button" id="btnViewRole" (click)="navigateToRoleView(role)"
                       *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'View' }))">
                   <span class="fa fa-file-text-o"></span>
               </button>
-              <button type="button" id="btnUpdateTile" (click)="navigateToRoleEdit(role)"
+              <button type="button" id="btnUpdateRole" (click)="navigateToRoleEdit(role)"
                       *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' }))">
                   <span class="fa fa-pencil-square-o"></span>
               </button>
-              <button type="button" id="btnDeleteTile" (click)="deleteRole(role)"
-                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Delete' }))">
+              <button type="button" id="btnDeleteRole" (click)="deleteRole(role)"
+                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Delete' }))" >
                   <span class="fa fa-trash-o"></span>
               </button>
           </div>
