--- a/App/ClientApp/src/app/layout/users/list/list.component.html
+++ b/App/ClientApp/src/app/layout/users/list/list.component.html
@@ -19,16 +19,17 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
           <!-- Position Column -->
           <ng-container matColumnDef="name">
             <th class="width20  ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element"><img class="user-img" src="assets/images/user.jpg"><span class="user-name">{{element.FirstName}} {{element.LastName}}</span></td>
+            <td mat-cell *matCellDef="let element">
+              <img class="user-img" src="assets/images/user.jpg"><span class="user-name">{{element.FirstName}} {{element.LastName}}</span></td>
           </ng-container>
 
           <!-- Name Column -->
@@ -50,25 +51,25 @@
           </ng-container>
 
           <ng-container matColumnDef="active">
-            <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Active </th>
+            <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Active </th>
             <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.IsActive" class="fa fa-toggle-on text-success font20" title="element.IsActive"></span>
-              <span *ngIf="!element.IsActive" class="fa fa-toggle-off text-success font20" title="element.IsActive"></span>
+              <span *ngIf="element.IsActive" class="fa fa-toggle-on text-success font20" title="{{element.IsActive}}"></span>
+              <span *ngIf="!element.IsActive" class="fa fa-toggle-off text-success font20" title="{{element.IsActive}}"></span>
 
             </td>
           </ng-container>
 
           <ng-container matColumnDef="lock">
-            <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Lock </th>
+            <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Lock </th>
             <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.IsLock" class="fa fa-toggle-on text-secondary font20" title="element.IsLock"></span>
-              <span *ngIf="!element.IsLock" class="fa fa-toggle-off text-secondary font20" title="element.IsLock"></span>
+              <span *ngIf="element.IsLocked" class="fa fa-toggle-on text-secondary font20" title="{{element.IsLocked}}"></span>
+              <span *ngIf="!element.IsLocked" class="fa fa-toggle-off text-secondary font20" title="{{element.IsLocked}}"></span>
 
             </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th class="width20 ip-w-35" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <th class="width20 ip-w-35" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
                 <button type="button" title="View" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'View' }))" (click)="viewUser(element)" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
