--- a/App/ClientApp/src/app/layout/users/list/list.component.html
+++ b/App/ClientApp/src/app/layout/users/list/list.component.html
@@ -29,7 +29,14 @@
           <ng-container matColumnDef="name">
             <th class="width20  ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element">
-              <img class="user-img" src="assets/images/user.png"><span class="user-name">{{element.FirstName}} {{element.LastName}}</span></td>
+
+              <!--for jpg png etc-->
+              <!--<img class="user-img" src="assets/images/user.png">-->
+
+              <!--for letter image-->
+              <span class="user-img-ltr"><span>T</span><span>S</span></span>
+              <span class="user-name"> {{element.FirstName}} {{element.LastName}}</span>
+            </td>
           </ng-container>
 
           <!-- Name Column -->
