--- a/App/ClientApp/src/app/layout/users/view/view.component.html
+++ b/App/ClientApp/src/app/layout/users/view/view.component.html
@@ -8,8 +8,14 @@
       <div class="row">
         <div class="col-md-4 col-sm-5 col-12 form-group">
           <div class="profile-avtar-box">
+            <!--letter image-->
+            <div class="ltr-img">
+              <span>T</span>
+              <span>S</span>
+            </div>
+            <!--jpg png...-->
             <div class="image-preview mb-3">
-              <img src="assets/images/user.jpg" class="profile-avtar selected-avatar" />
+              <img src="assets/images/user.jpg" class="profile-avtar" />
             </div>
           </div>
           <div style="clear:both"></div>
