--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -469,11 +469,37 @@
     margin-top: 3px;
   }
 
+  .mat-tooltip {
+   background:#f5f5f5;
+   color:#000;
+   border:solid thin #e1e1e1;
+   font-size:14px;
+  }
+
+  .user-img-ltr {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-right: 10px;
+    background: #f5f5f5;
+    overflow: hidden;
+    border: solid thin #e1e1e1;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    color: #868383;
+  }
+
   .user-img {
     width: 35px;
     height: 35px;
     border-radius: 50%;
     margin-right: 10px;
+    background: #f5f5f5;
+    overflow: hidden;
+    border: solid thin #e1e1e1;
   }
 
   .user-name {
@@ -1125,7 +1151,32 @@
     -moz-box-shadow: 0 4px 7px 0 rgba(0, 0, 0, .2);
   }
 
+  .ltr-img {
+    width: 150px;
+    height: 150px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid thin #e1e1e1;
+    padding: 0;
+    font-size: 60px;
+    border-radius: 50%;
+    background: #e6e6e6;
+    color: #696868;
+    text-transform: uppercase;
+  }
 
+  .image-preview {
+    width: 150px;
+    height: 150px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid thin #e1e1e1;
+    padding: 10px;
+  }
 
   .profile-avtar-box {
     width: 100%;
@@ -1135,12 +1186,14 @@
   }
 
   .profile-avtar {
-    width: 150px;
-    height: 150px;
+    width: auto;
+    max-width: 100%;
+    height: auto;
     display: inline-block;
-    border-radius: 50%;
+    /*border-radius: 50%;
     -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
+    -webkit-border-radius: 50%;*/
+    /*background: #f5f5f5;*/
   }
 
   .selected-avatar {
