--- a/App/ClientApp/src/app/layout/change-password/change-password.component.html
+++ b/App/ClientApp/src/app/layout/change-password/change-password.component.html
@@ -1,53 +1,104 @@
 
-  <div class="main-container">
-    <div class="page-title">
-      <span class="xs-title">Change Password</span>
-    </div>
-    <form autocomplete="on" id="frmUpdatePassword">
-      <div class="card border-0 mb-2 card-shadow">
-        <div class="card-body">
-          <div class="row form-group">
-            <div class="col-sm-4">
-              <label for="inputOldPassword" id="lblOldPassword">Old Password</label>
-              <div class="input-group">
-                <input type="password" class="form-control" aria-describedby="basic-addon2" id="inputOldPassword">
-                <div class="input-group-append">
-                  <button class="btn input-group-text fa fa-eye" type="button"></button>
-                </div>
+<div class="main-container">
+  <div class="page-title">
+    <span class="xs-title">Change Password</span>
+  </div>
+  <form autocomplete="on" [formGroup]="userFormGroup" id="frmUpdatePassword" novalidate>
+    <div class="card border-0 mb-2 card-shadow">
+      <div class="card-body">
+        <div class="row form-group">
+          <div class="col-sm-4">
+            <label for="inputOldPassword" id="lblOldPassword">Old Password</label>
+            <div class="input-group">
+              <input type="password" formControlName="currentPassword" class="form-control" aria-describedby="basic-addon2" id="inputOldPassword">
+              <div class="input-group-append">
+                <button class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
+              <!--<div class="validation-msg" style="color:red" *ngIf="currentPassword.touched && currentPassword.errors">
+                <ul style="list-style-type:none">
+
+                  <li class="text-danger" *ngIf="currentPassword.errors?.minlength">
+                    Old password length should not be less than 8
+                  </li>
+                  <li class="text-danger" *ngIf="currentPassword.errors?.required">
+                    Old password required
+                  </li>
+                </ul>
+              </div>-->
             </div>
           </div>
-          <div class="row form-group">
-            <div class="col-sm-4">
-              <label for="inputNewPassword" id="lblNewPassword">New Password</label>
-              <div class="input-group">
-                <input type="password" class="form-control" aria-describedby="basic-addon2" id="inputNewPassword" minlength="8">
-                <div class="input-group-append">
-                  <button class="btn input-group-text fa fa-eye" type="button"></button>
-                </div>
+        </div>
+        <div class="row form-group">
+          <div class="col-sm-4">
+            <label for="inputNewPassword" id="lblNewPassword">New Password</label>
+            <div class="input-group">
+              <input type="password" formControlName="newPassword" class="form-control" aria-describedby="basic-addon2" id="inputNewPassword" minlength="8">
+
+              <div class="input-group-append">
+                <button class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
+
+
+              <!--<div class="validation-msg" style="color:red" *ngIf="newPassword.touched && newPassword.errors">
+      <ul style="list-style-type:none">
+
+        <li class="text-danger" *ngIf="newPassword.errors?.minlength">
+          New password length should not be less than 8
+        </li>
+        <li class="text-danger" *ngIf="newPassword.errors?.required">
+          New password required
+        </li>
+      </ul>
+    </div>-->
+            </div>
+            <div class="validation-msg" style="color:red">
+              <label>{{statusnewPassword}}</label>
+            </div>
+            <div class="validation-msg" style="color:red">
+              <label>{{statusnewPasswordLength}}</label>
             </div>
           </div>
-          <div class="row form-group">
-            <div class="col-sm-4">
-              <label for="inputConfirmPassword" id="lblConfirmPassword">Confirm New Password</label>
-              <div class="input-group">
-                <input type="password" class="form-control" aria-describedby="basic-addon2" id="inputConfirmPassword">
-                <div class="input-group-append">
-                  <button class="btn input-group-text fa fa-eye" type="button"></button>
-                </div>
+
+        </div>
+        <div class="row form-group">
+
+          <div class="col-sm-4">
+            <label for="inputConfirmPassword" id="lblConfirmPassword">Confirm New Password</label>
+            <div class="input-group">
+              <input type="password" formControlName="newPassword1" class="form-control" aria-describedby="basic-addon2" id="inputConfirmPassword">
+              <div class="input-group-append">
+                <button class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
+
+              <!--<div class="validation-msg" style="color:red" *ngIf="newPassword1.touched && newPassword1.errors">
+      <ul style="list-style-type:none">
+        <li class="text-danger" *ngIf="newPassword1.errors?.minlength">
+          New password length should not be less than 8
+        </li>
+        <li class="text-danger" *ngIf="newPassword1.errors?.required">
+          New password required
+        </li>
+      </ul>
+    </div>-->
+            </div>
+            <div class="validation-msg" style="color:red">
+              <label>{{statusconfirmPasswordLength}}</label>
+            </div>
+            <div class="validation-msg" style="color:red">
+              <label>{{statusconfirmPassword}}</label>
             </div>
           </div>
+
         </div>
       </div>
       <div class="card border-0 mt-4 mb-3 bg-transparent">
         <div class="card-body p-0">
-          <button class="btn-footer-fill mr-2" id="btnSave">Update</button>
+          <button class="btn-footer-fill mr-2" id="btnSave" [disabled]="userFormGroup.invalid" (click)="Submit()">Update</button>
           <button class="btn-footer-outline" id="btnCancel" (click)="backClicked()">Cancel</button>
         </div>
       </div>
-    </form>
-  </div>
+    </div>
+  </form>
+</div>
 
 
