--- a/App/ClientApp/src/app/layout/users/add/add-edit.component.html
+++ b/App/ClientApp/src/app/layout/users/add/add-edit.component.html
@@ -11,17 +11,17 @@
             <div class="profile-avtar-box">
 
               <!--letter image-->
-              <div class="ltr-img">
+              <!--<div class="ltr-img">
                 <span>T</span>
                 <span>S</span>
-              </div>
+              </div>-->
 
               <div *ngIf="image; else imageIcon" class="image-preview">
                 <img [src]="image" class="profile-avtar">
               </div>
               <!--<div class="image-preview mb-3">
-                <img src="assets/images/user.jpg" class="profile-avtar selected-avatar" />
-              </div>-->
+    <img src="assets/images/user.jpg" class="profile-avtar selected-avatar" />
+  </div>-->
 
               <ng-template #imageIcon>
                 <div class="image-preview">
