--- a/App/ClientApp/src/app/layout/roles/view/view.component.html
+++ b/App/ClientApp/src/app/layout/roles/view/view.component.html
@@ -83,7 +83,7 @@
     <div class="card border-0 mt-4 mb-3 bg-transparent">
       <div class="card-body p-0">
         <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToRoleEdit()">Update</button>
-        <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="deleteRole()">Delete</button>
+        <!-- <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="deleteRole()">Delete</button> -->
         <button class="btn-footer-outline" id="btnCancel" (click)="navigateToRoleList()">Cancel</button>
       </div>
     </div>
