user image change

--- a/App/ClientApp/src/app/layout/users/add/add-edit.component.html
+++ b/App/ClientApp/src/app/layout/users/add/add-edit.component.html
@@ -19,7 +19,7 @@
                 <img [src]="image" class="profile-avtar">
               </div>-->
               <div class="image-preview mb-3">
-                <img src="assets/images/user.png" class="profile-avtar selected-avatar" />
+                <img src="assets/images/user.jpg" class="profile-avtar selected-avatar" />
               </div>
 
               <ng-template #imageIcon>
