change password, logged in username to topbar - issue resolved.

--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
   <ul class='nav nav-toolbar float-right show-toolbar'>
     <li class="nav-item dropdown">
       <a class="nav-link top-nav-link" id="dropdownMenuButton" data-toggle="dropdown">
-        <span class="user-name-nav">Super Admin</span>
+        <span class="user-name-nav">{{loggedInUserName}}</span>
         <i class="fa fa-angle-down ml-2"></i>
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
