--- a/App/ClientApp/src/app/layout/change-password/change-password.component.html
+++ b/App/ClientApp/src/app/layout/change-password/change-password.component.html
@@ -3,28 +3,24 @@
   <div class="page-title">
     <span class="xs-title">Change Password</span>
   </div>
-  <form autocomplete="on" [formGroup]="userFormGroup" id="frmUpdatePassword" novalidate>
+  <form autocomplete="on" [formGroup]="changePasswordForm" id="frmUpdatePassword" novalidate>
     <div class="card border-0 mb-2 card-shadow">
       <div class="card-body">
         <div class="row form-group">
           <div class="col-sm-4">
             <label for="inputOldPassword" id="lblOldPassword">Old Password</label>
             <div class="input-group">
-              <input type="password" formControlName="currentPassword" class="form-control" aria-describedby="basic-addon2" id="inputOldPassword">
+              <input type="password" formControlName="oldPassword" class="form-control" aria-describedby="basic-addon2" id="inputOldPassword">
               <div class="input-group-append">
                 <button class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
-              <!--<div class="validation-msg" style="color:red" *ngIf="currentPassword.touched && currentPassword.errors">
-          <ul style="list-style-type:none">
-
-            <li class="text-danger" *ngIf="currentPassword.errors?.minlength">
-              Old password length should not be less than 8
-            </li>
-            <li class="text-danger" *ngIf="currentPassword.errors?.required">
-              Old password required
-            </li>
-          </ul>
-        </div>-->
+            </div>
+            <div class="validation-msg" style="color:red">
+              <ng-container *ngFor="let error of error_messages.oldPassword">
+                <div class="text-danger" *ngIf="changePasswordForm.get('oldPassword').hasError(error.type) && (changePasswordForm.get('oldPassword').dirty || changePasswordForm.get('oldPassword').touched)">
+                  {{ error.message }}
+                </div>
+              </ng-container>
             </div>
           </div>
         </div>
@@ -33,51 +29,48 @@
             <label for="inputNewPassword" id="lblNewPassword">New Password</label>
             <div class="input-group">
               <input type="password" formControlName="newPassword" class="form-control" aria-describedby="basic-addon2" id="inputNewPassword" minlength="8">
-
               <div class="input-group-append">
                 <button class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
             </div>
             <div class="validation-msg" style="color:red">
-              <label>{{statusnewPassword}}</label>
-              <label>{{statusnewPasswordLength}}</label>
+              <ng-container *ngFor="let error of error_messages.newPassword">
+                <div class="text-danger" *ngIf="changePasswordForm.get('newPassword').hasError(error.type) && (changePasswordForm.get('newPassword').dirty || changePasswordForm.get('newPassword').touched)">
+                  {{ error.message }}
+                </div>
+              </ng-container>
+              <div class="text-danger" *ngIf="changePasswordForm.errors != null && changePasswordForm.errors.oldPwdErr != null">
+                Current Password and New Password must not be same.
+              </div>
             </div>
           </div>
 
         </div>
         <div class="row form-group">
-
           <div class="col-sm-4">
             <label for="inputConfirmPassword" id="lblConfirmPassword">Confirm New Password</label>
             <div class="input-group">
-              <input type="password" formControlName="newPassword1" class="form-control" aria-describedby="basic-addon2" id="inputConfirmPassword">
+              <input type="password" formControlName="confirmpassword" class="form-control" aria-describedby="basic-addon2" id="inputConfirmPassword">
               <div class="input-group-append">
                 <button class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
-
-              <!--<div class="validation-msg" style="color:red" *ngIf="newPassword1.touched && newPassword1.errors">
-          <ul style="list-style-type:none">
-            <li class="text-danger" *ngIf="newPassword1.errors?.minlength">
-              New password length should not be less than 8
-            </li>
-            <li class="text-danger" *ngIf="newPassword1.errors?.required">
-              New password required
-            </li>
-          </ul>
-        </div>-->
             </div>
             <div class="validation-msg" style="color:red">
-              <label>{{statusconfirmPasswordLength}}</label>
-            </div>
-            <div class="validation-msg" style="color:red">
-              <label>{{statusconfirmPassword}}</label>
+              <ng-container *ngFor="let error of error_messages.confirmpassword">
+                <div class="text-danger" *ngIf="changePasswordForm.get('confirmpassword').hasError(error.type) && (changePasswordForm.get('confirmpassword').dirty || changePasswordForm.get('confirmpassword').touched)">
+                  {{ error.message }}
+                </div>                
+              </ng-container>
+              <div class="text-danger" *ngIf="changePasswordForm.errors != null && changePasswordForm.errors.confirmPwdErr != null">
+                New Password and Confirm Password must be match.
+              </div>
             </div>
           </div>
 
         </div>
         <div class="card border-0 mt-4 mb-3 bg-transparent">
           <div class="card-body p-0">
-            <button class="btn-footer-fill mr-2" id="btnSave" [disabled]="userFormGroup.invalid" (click)="Submit()">Update</button>
+            <button class="btn-footer-fill mr-2" id="btnSave" [disabled]="!changePasswordForm.valid" (click)="Submit()">Update</button>
             <button class="btn-footer-outline" id="btnCancel" (click)="backClicked()">Cancel</button>
           </div>
         </div>
