--- a/App/ClientApp/src/app/layout/roles/list/list.component.html
+++ b/App/ClientApp/src/app/layout/roles/list/list.component.html
@@ -26,17 +26,25 @@
       <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
         <!-- Position Column -->
         <ng-container matColumnDef="name">
-          <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <th class="width30 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
           <td mat-cell *matCellDef="let role">{{role.Name}}</td>
         </ng-container>
 
         <ng-container matColumnDef="description">
-          <th class="width48 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+          <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
           <td mat-cell *matCellDef="let role">{{role.Description}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="active">
+          <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Active </th>
+          <td mat-cell *matCellDef="let element">
+            <span *ngIf="element.IsActive">Yes</span>
+            <span *ngIf="!element.IsActive">No</span>
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="actions">
-          <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
+          <th class="width20 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
           <td mat-cell *matCellDef="let role">
             <div class="action-btns btn-tbl-action">
               <button type="button" id="btnViewRole" (click)="navigateToRoleView(role)"
